This file documents the revision history for Perl extension Test-DBIx-Class.

0.09  28 August 2009
    - New Functionality:  Added storage trait 'Testpostgresql' which works just
      like the 'Testmysql' except deploys to a test Postgresql database.
    - Changed some tests to prevent failures to install.
    - updated the Makefile.PL so that the support for Mysql and Postgresql is
      optional.
    - New documentation to reflect the above.

0.08  27 August 2009
    - New Functionality:  Added storage trait 'Testmysql' which allows you
      to create a temporary test instance of mysql, deploy and test against
      it, and clean itself up afterward.  Now you can test against Mysql
      nearly as easily as SQLite.
    - Populating fixtures now wraps everything inside a transaction.
    - Fixed an error in the Example Schema, now Email is a varchar instead of
      an integer
    - Documentation and tests for all the above

0.07  26 August 2009
    - Create framework for 'pluggable' storage traits and migrated all the
      SQLite specific stuff to a SQLite trait.  This change will allow us
      to add traits to test replication and other types of database setups.
    - Documentation and test improvements to reflect the above.
0.06  25 August 2009
    - Documentation additions related to overridding configuration via %ENV
    - Fixes to broken POD
    - Allows the option 'force_drop_table' to be set at configuration time
    - More completely documented ::SchemaManager options
    - Some additional (undocumented) features added to the exported subroutine
      generators.  
	
0.05  24 August 2009 @ 11::55::00 UTC
    - New Feature: Perform configuration file substitutions, similar to the way
      Catalyst::Plugin::ConfigLoader works.  Added tests and docs.

0.04  24 August 2009
    - Fixed some minor documentation typos and improved error reporting when a
      schema fails to deploy (we now properly report the actual error instead of
      silently dying).